# structured-language-modeling

./: PAPER.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: compare_models.py  evaluate.py  train.py
src/slm/: __init__.py
src/slm/data/: __init__.py  datasets.py  tokenizers.py
src/slm/evaluation/: __init__.py  evaluator.py  metrics.py
src/slm/models/: __init__.py  attention.py  base.py  baseline.py  cfg.py  conv.py  regex.py  rnn.py
src/slm/scripts/: __init__.py  compare.py  evaluate.py  train.py
src/slm/training/: __init__.py  losses.py  optimizers.py  trainer.py
src/slm/utils/: __init__.py  config.py  logging.py  model_factory.py
